--- a/rapport/main.tex
+++ b/rapport/main.tex
@@ -25,13 +25,15 @@
 	Experts in Teamwork - Applied Mathematics at NTNU, Trondheim. The work
 	was performed over the course of one semester, with primarily one
 	working day per week. The authors whish to thank Lise Kvalø and the
-	people at the Instrumentation Workshop at the Institute of Physics 
-	for their generosity in lending out relevant lab equipment, and the 
-	people working at ??? for lending out their microwave oven.}
+	people at the Instrumentation Workshop at the Department of Physics 
+	for their generosity in lending out relevant lab equipment, and Eivind
+	Steinnes at the Department of Structural Engineering for lending out the
+	office microwave oven.}
 	%\coffee{1}
 	\clearpage		%Ny side
 
 %Innholdsfortegnelse (automagisk)
+	\setcounter{tocdepth}{1}
 	\tableofcontents
 	\clearpage		%Blank side
 	\thispagestyle{empty}	%Uten sidetall
