--- a/rapport/theory.tex
+++ b/rapport/theory.tex
@@ -7,7 +7,7 @@ GHz. To be modeled is the heat in the strip, phase transitions and transport.
 \section{Our approach}
 \begin{figure}[!h]
   \begin{center}
-    \includegraphics[width=0.3\linewidth]{physicists.png}
+    \includegraphics[width=0.35\linewidth]{physicists.png}
   \end{center}
   \caption{Our initial approach to the problem. \url{xkcd.com/793}}
   \label{fig:xkcd_physics}
@@ -34,27 +34,39 @@ equation, with various source terms, \crefrange{eq:heat1}{eq:heat3}:
 \end{align}
 Here the subscript $m$ denotes meat, $s$ denotes solid fat, and $l$ denotes
 liquid fat. $J^{MW}$ is the source term representing the microwave oven.
-In the initial approach, this is modelled as a cylindrically symmetric term,
+Here this is modelled as a cylindrically symmetric term,
 with the radial power distribution on the form \cref{eq:effektfordeling},
 \begin{equation}
   J^{MW}(r) = 0.5 + 2.55008x - 0.588013x^2 + 0.032445x^3 + 0.00124411x^4 - 0.0000973516x^5 \rm{,}
   \label{eq:effektfordeling}
 \end{equation}
-i.e. a fifth degree polynomial, interpolated from the results in \cite{huang+zhu}.
+i.e. a fifth degree polynomial, interpolated from the results in
+\cite{huang+zhu}. This is an effective source term, and is considered valid for
+cooking times that are large compared to the rotation period of the plate inside
+the microwave oven. This term may look confusing, so it has been illustrated in
+\cref{fig:microwave}.\\
+
+\begin{figure}[h!]
+  \begin{center}
+    \includegraphics[width=0.7\textwidth]{microwave.pdf}
+  \end{center}
+  \caption{The microwave effect distribution}
+  \label{fig:microwave}
+\end{figure}
 
 Furthermore, there is the term $J^{Melt}$ which represents heat loss due to
 latent heat absorbed in the solid-liquid phase transition. This can be written as 
 \[ \frac{L \rho}{T_2-T_1} \pd{T}{t} \rm{,} \quad T \in (T_1,T_2) \rm{,}\]
-where the fat is melting between the temperatures $T_1$ and $T_2$. For fat these
-are typically around 30-50$^\circ$C. For $T \notin (T1,T2)$ this term is zero,
-and it is readily seen that this is equivalent to a modification of the constant
+with $L$ the latent heat of the fat, and where the fat is melting between the temperatures 
+$T_1$ and $T_2$. For fat these are typically around 30-50$^\circ$C. For $T \notin (T1,T2)$ 
+this term is zero, and it is readily seen that this is equivalent to a modification of the constant
 $c_{p,l}$ in \cref{eq:heat2} when $T \in (T1,T2)$, thus it is not a serious
-complication.
+complication.\\
 
 In the last of the heat equations, there also appears what is called a
 convective derivative, on the form $(\v{v}\cdot \grad{})T$. This is a somewhat
 more complicated term, and is essentially a modification due to transport of
-liquid fat implying a transport of heat. But we're in luck! 
+liquid fat implying a transport of heat. But we're in luck! \\
 
 As the bacon strip is essentially two-dimensional, transport will almost
 exclusively happen in the vertical (small) direction, and also the
@@ -74,8 +86,7 @@ important, which makes sense here. This leads to \cref{eq:navier-stokes}
   \rho \left(\pd{v}{t} + v \cdot \pd{v}{x}\right) = -\pd{p}{x} + \mu \nabla^2 v + f
  \label{eq:navier-stokes}
 \end{equation}
-where $f$ includes any additional forces, such as gravity. This term is
-discussed in further detail below. An interesting term here is $\pd{p}{x}$, where
+where $f$ includes any additional forces, such as gravity. An interesting term here is $\pd{p}{x}$, where
 $p$ is the pressure in the fluid. Following the work by \cite{brent}, we replace
 this with a term inspired by \cref{carman-kozeny}
 \begin{equation}
@@ -87,19 +98,19 @@ $v_a$ is an apparent velocity. As the volume element melts, $\epsilon$ goes from
 zero to one, and $\pd{p}{x}$ goes from a very large value to zero. This is known 
 as the Carman-Kozeny equation for flow in a pouros medium, and is applicable to 
 materials where melting does not happen at one specific temperature, but instead 
-over a range of temperatures (non-isothermal phase change). \cite{poirier} 
+over a range of temperatures (non-isothermal phase change). \cite{poirier} \\
 
-This is typical for a material with a combination of slightly different
+This melting behavior is typical for a material with a combination of slightly different
 fats, e.g. chocolate or in this case bacon. When a volume element is partially
 melted, it is assumed to have a dendritic structure, and it is said to be in a
 ``mushy'' phase. The dendritic structure itself, and whether the flow is parallell or
-orthogonal to the dendritic structure, will influence the constant C. 
+orthogonal to the dendritic structure, will influence the constant C. \\
 
 Using the procedure outlined in \cite{poirier}, the constant $C$ was estimated to be
 $8 \times 10^8$, where flow is assumed to be parallell to the dendritic
 structure, and the primary dendritic arm distance in bacon fat was measured to be
 about 2.5 mm. The assumption of parallell flow dictates the value of the Kozeny
-constant yielding the final value for $C$.
+constant yielding the final value for $C$.\\
 
 Influenced by these considerations, the term $\pd{p}{x}$ in
 \cref{eq:navier-stokes} was replaced by \cref{eq:pressure}
@@ -108,13 +119,13 @@ Influenced by these considerations, the term $\pd{p}{x}$ in
   \label{eq:pressure}
 \end{equation}
 where $d$ is a tiny constant introduced simply to avoid dividing by zero in the
-numerical procedure.
+numerical procedure.\\
 
 Introducing this term has two effects. First of all, for a solid element,
 $\pd{p}{x}$ becomes very large, and forces the velocity to be zero. When the
 element starts melting, the flow will mimic the Carman-Kozeny flow, which is
 realistic for a porous medium, and finally in the molten stage, the ordinary
-pressureless Navier Stokes equations are recovered.
+pressureless Navier Stokes equations are recovered.\\
 
 Alas, the numerical implementation of the transport equation was not completed
 within the timeframe of the project. The theory is still presented here for
