--- a/rapport/implementation.tex
+++ b/rapport/implementation.tex
@@ -230,6 +230,9 @@ of practical issues surfaced that would require modifications to existing code
 as well, so the continued development of the transport equation was dismissed
 as the project was close to its end.
 
+Further work on the mass-transfer equations would involve time-dependant boundary conditions,
+crank-nicholson discretization, and solving them with the conjugate gradient method.
+
 Since the mass transfer equations was not properly implemented, the stop criteria was not 
 implemented either, as it turned out to be more practical to just run the simulation for as 
 many seconds as needed, say 120, and inspect the resulting plots to find an
