endring i teori vs. virkelighet.tex

--- a/logger/logg11.tex
+++ b/logger/logg11.tex
@@ -20,37 +20,37 @@
 
 \section*{Oppsummering}
 
-Dagen idag kan oppsummeres som en typisk jobbedag, hvor gruppa har vært delt
-store deler av dagen. Paul og Joakim behandlet data fra baconforsøk, mens
-Åsmund, Knut og Turid jobbet videre med programmet, endelig ser vi fornuftige
+Dagen idag kan oppsummeres som en typisk jobbedag, hvor gruppa har vÃ¦rt delt
+store deler av dagen. Paul og Joakim behandlet data fra baconforskÃ¸ket, mens
+Ã…smund, Knut og Turid jobbet videre med programmet, endelig ser vi fornuftige
 resultater fra datamodellen.
 
-Etter lunsj var det en meget god gruppeaktivitet i regi læringsassistentene.
+Etter lunsj var det en meget god gruppeaktivitet i regi lÃ¦ringsassistentene.
 Gruppemedlemmene skulle ved hjelp av poeng, rangere seg selv og gruppemedlemmer
-i ulike situasjoner. Vi hadde på forhånd bestemt oss for at presentasjonen av
+i ulike situasjoner. Vi hadde pÃ¥ forhÃ¥nd bestemt oss for at presentasjonen av
 gruppa i prosessrapporten skulle inneholde to aspekter pr. gruppemedlem.
 \begin{itemize}
 \item Gruppemedlemmets egen oppfatning av seg selv
 \item Gruppas oppfatning av personen
 \end{itemize}
-Altså var denne biten av prosessrapporten en naturlig forlengelse av øvingen, og
-dermed noe vi følte vi hadde stort utbytte av.
+AltsÃ¥ var denne biten av prosessrapporten en naturlig forlengelse av Ã¸vingen, og
+dermed noe vi fÃ¸lte vi hadde stort utbytte av.
 
-Verdt å kommentere at gruppa (tilsynelatende) virker meget trygg på hverandre,
+Verdt Ã¥ kommentere at gruppa (tilsynelatende) virker meget trygg pÃ¥ hverandre,
 det var ingen pinlige og/eller flaue situasjoner i forbindelse med
-poenggivningen, i tillegg til at vår selvoppfatning så ut til å passe godt med
+poenggivningen, i tillegg til at vÃ¥r selvoppfatning sÃ¥ ut til Ã¥ passe godt med
 gruppas oppfatning som helhet.
 
 Gruppa har likevel merket seg at hver enkelts oversikt over prosjektets totale
 fremgang er noe vag, Joakim foreslo derfor at det for hver gang skulle skrives
-ned en fremdriftsplan, hvor vi oppsummerte dagens gjøremål og sammenlignet med
-planlagt aktivitet. I tillegg til at vi bestemte oss for hva som skulle være
+ned en fremdriftsplan, hvor vi oppsummerte dagens gjreml og sammenlignet med
+planlagt aktivitet. I tillegg til at vi bestemte oss for hva som skulle vre
 gjort til neste sammenkomst. Dette var det bred enighet om i gruppa, og man kan
 godt si at dette fremprovoserer bruken av flere av Scharwz' grupperegler,
-eksempelvis nr. $7$: ``Formuler fremtidige mål i fellesskap''.
+eksempelvis nr. $7$: ``Formuler fremtidige ml i fellesskap''.
 
-Gruppa føler at fremdriften for tiden er god, i tillegg til tryggheten innad er
-økende. Disse egenskapene henger utvilsomt sammen, det at vi som gruppemedlemmer
-er trygge på hverandre fører til bedre kommunikasjon og færre misforståelser,
-noe som igjen leder til økt produktivitet og effektivitet.
+Gruppa fler at fremdriften for tiden er god, i tillegg til tryggheten innad er
+kende. Disse egenskapene henger utvilsomt sammen, det at vi som gruppemedlemmer
+er trygge p hverandre frer til bedre kommunikasjon og frre misforstelser,
+noe som igjen leder til kt produktivitet og effektivitet.
 \end{document}
