--- a/prosess/analyse.tex
+++ b/prosess/analyse.tex
@@ -175,7 +175,7 @@ gruppemedlemmer begynte å bli stresset, Turid skriver i sin private logg ``jeg
 begynner å bli stresset, og er redd for at vi ikke skal bli ferdig i tide''.
 $\\$
 
-Neste landsbydag luftet Turid frustrasjonen under kaffemøtet, det viste seg at
+Neste landsbydag luftet Turid frustrasjonen under kaffemøtet. Det viste seg at
 Joakim, Paul og Knut følte det på samme måte, mens Åsmund hadde rimelig god
 oversikt. Dette hadde sin naturlige årsak i at Åsmund tidlig hadde påtatt seg
 rollen som layout-ansvarlig, og at alt nytt materiale gikk til han. Det ble
@@ -184,7 +184,7 @@ kunne få tilgang til nåværende status. Det ble derfort gjennomført en revisj
 av samarbeidskontrakten (se \cref{sec:kontrakt}), i form av et punkt om oppføring av
 status og fremdriftsplan fra gang til gang. Vi erfarer her at
 tilbakemeldingssystemet innad i gruppa fungerer, selv om det tok litt lang tid
-før problemet ble oppdaget, i tillegg ser vi at gruppereglene til Scharwz
+før problemet ble oppdaget. I tillegg ser vi at gruppereglene til Scharwz
 (\cref{tab:grunnregler}) har noe for seg, og at å droppe kun én faktisk
 resulterer i lavere effektivitet. \\
 
@@ -192,7 +192,7 @@ resulterer i lavere effektivitet. \\
 %Situasjon: ``In your face!'' fra Turid til Joakim om Crank og stabilitet
 Ved oppstart ble det tidlig diskutert hvilket diskretiseringsskjema som skulle
 brukes på differensiallignignene. Da diskusjonen peilet seg inn på
-Crank-Nicolson-skjemaet ble påpekte Turid at dette var ubetinget stabilt. Dette
+Crank-Nicolson-skjemaet påpekte Turid at dette var ubetinga stabilt for varmelikningen. Dette
 sa Joakim seg uenig i, da han mente å huske noe om ustabilitet i forbindelse med
 nevnte skjema. Argumentene utviklet seg etterhvert til å bli rimelig usaklige, i
 form av Turids ``jo, den er stabil'' mot Joakims ``nei, den er ustabil'', man
@@ -204,19 +204,20 @@ avgårde en ``ìn your face'' til Joakim. $\\$
 
  Det ble likevelt sagt med et smil om munnen, noe også Joakim oppfattet. 
 Og det hele gruppa lo av situasjonen i ettertid. Knut skriver i sin personlige
-logg ``Vi hadde en potensiell situasjon idag mellom Turid og Joakim, heldigvis
-lo alle parter av det, virker som det er god humor blant gruppemedlemmene''.
+logg ``Vi hadde en potensiell situasjon idag mellom Turid og Joakim. Heldigvis
+såg alle parter humoren i utsagnet. Det virker som det er god humor blant gruppemedlemmene''.
 
 Likevel kan man i etter-på-klokskapens lys se potensielle faremomenter
 i hendelsen. Joakim kunne tatt seg nær av det Turid sa, og valgt å holde sine
-meninger for seg selv fremover, i frykt for å bli latterliggjort igjen. Men, i
-egenskap av et gruppens medlemmer ikke tar seg selv så høytidelig ble dette en
-situasjon som bidro til at vi ble bedre kjent. I form av at vi så at det er/var
-rimelig stor takhøyde for hva som kunne bli sagt, dette har utvilsomt påvirket
-kommunikasjonen i ettertid. Og gjort at kritikk lettere
+meninger for seg selv fremover i frykt for å bli latterliggjort igjen. Men, i
+egenskap av gruppens medlemmer ikke tar seg selv så høytidelig ble dette en
+situasjon som bidro til at vi ble bedre kjent. Vi så at det er/var
+rimelig stor takhøyde for hva som kunne bli sagt, noe som utvilsomt har påvirket
+kommunikasjonen i ettertid. Dette har ført til at kritikk lettere
 har kommet frem, og at hvert gruppemedlem heller ikke har vært redd for å motta
 den. Man kan godt si at gruppemedlemmens sammenfallende humoristiske sans har
-gjort grensene og tersklene for å ta opp ``ubehagelige'' ting lavere, da du som
-avsender av den dårlige nyheten vet at mottakeren ikke stenger seg inne ved å
-høre det du har tenkt å si. Vi observerer altså her at teorien som tar for seg
-humor (\cite{jj-humor} og \cref{sec:kommunikasjonsteori}) stemmer meget godt med humors innvirkning på gruppeprosesser i virkeligheten.
+gjort grensene og tersklene for å ta opp ``ubehagelige'' ting lavere, da ein klarer å 
+sjå eventuelt humor i situasjonen. Med ein uhøytidlig atmosfære på gruppen vet gruppemedlemmer
+og at eventuell kritikk ikke blir tatt for personleg. Vi observerer altså her at teorien 
+som tar for seg humor (\cite{jj-humor} og \cref{sec:kommunikasjonsteori}) stemmer 
+meget godt med humors innvirkning på gruppeprosesser i virkeligheten.
