Fikset noen trykkleif

--- a/prosess/medlemmer.tex
+++ b/prosess/medlemmer.tex
@@ -105,9 +105,9 @@ har høye forventniger til hverandre.
 \subsection*{Innstilling til gruppearbeid}
 Jeg foretrekker og ha klare retningslinjer for hvilke oppgaver de forskjellige 
 medlemmene har i gruppen. På denne måten kan oppgaver og løsningsmetoder diskuteres,
-uten at de blir "overdiskutert". Selv om han foretrekker å alene ha ansvaret for sine oppgaver,
-foretrekker han og jobbe sammen med andre, da diskusjoner rundt problemstillinger og
-løsningsmetoder hjelper han å få organisert tankene sine.
+uten at de blir "overdiskutert". Selv om jeg foretrekker å alene ha ansvaret for mine oppgaver,
+foretrekker jeg og jobbe sammen med andre, da diskusjoner rundt problemstillinger og
+løsningsmetoder hjelper meg til å få organisert tankene mine.
 
 \subsection*{Gruppa om Knut Halvor}
 Knut Halvor er gruppas datamann, noe som definerer hans forhold til gruppa i
