Skrev om kompetanse i praksis

--- a/prosess/analyse.tex
+++ b/prosess/analyse.tex
@@ -6,6 +6,28 @@
 
 \section{Kompetanse i praksis}
 
+Samtlige gruppemedlemmer følger sivilingeniørstudiet på NTNU, og har som en
+konsekvens av det den samme faglige ``grunnpakken''. Dette har gjort det enklere
+for gruppemedlemmene og kommunisere på tvers av fagfeltene, da alle behersker
+basisterminologi innen f.eks. fysikk, matematikk, statistikk og data. Utover
+dette har gruppemedlemmenes kompetanse fått praktisk utfoldelse gjennom det vi
+godt kan kalle naturlig oppgavefordeling. Knut Halvor, med bakgrunn fra
+datateknikk, har hatt hovedansvar for programmering. Fysikeren på gruppa,
+Åsmund, har taklet differensialligningenes praktiske anvendelse, mens gapet
+mellom programimplementasjon og fysisk problem har blitt fylt (les:
+diskretisert) av Turid og Paul, matematikerene på gruppa. Joakim, som har
+spesialisering innenfor konstruksjonsteknikk, har bidratt litt over det hele, da
+han har generell kunnskap innen de samme fagfeltene. Gjennom tilbakemelding på
+gruppelogger viste det seg også at Joakim var flink til å skrive prosess, slik
+at han fikk tildelt endel ansvar med tanke på prosessrapport. \\
+
+Det har i så måte vært meget tilfredstillende og se at teoretisk kunnskap kan
+benyttes til å beskrive praktiske fysiske fenomener, og at overenstemmelsen
+mellom numerisk simulering og eksperiment er god. \\ 
+
+\emph{Jeg fant dette kapittelet tungt å skrive om, vi må ha mer her.. Plenum
+plz?!}
+
 \section{Kommunikasjon og samspill}
 Det kommunikasjonsnettverket som ble brukt på gruppa vår var åpent nettverk og sirkel nettverk. 
 I et åpent nettverk kommuniserer alle med alle. Denne formen for kommunikasjon kommer tydelig fram 
