Byttet oppsummering mot konklusjon

--- a/prosess/main.tex
+++ b/prosess/main.tex
@@ -30,7 +30,7 @@
 	\include{teori}      %Introduksjon til relevant teori
 	\include{oppstart-utvikling} %Tilsvarende den ``røde delen'' på prosessrapport-presentasjonen.
 	\include{analyse}    %tilsvarende den brune delen
-	\include{oppsummering}
+	\include{konklusjon}
 	
 %Referanser
 	\bibliographystyle{plain}
