appendiks i prosess (gruppekontrakt)

--- a/prosess/analyse.tex
+++ b/prosess/analyse.tex
@@ -6,6 +6,20 @@
 
 \section{Kompetanse i praksis}
 
+%Skriv gjerne noe før dette
+Som et eksempel på kompetanse i praksis presenterer vi en grafisk fremstilling
+av et utdrag av loggen på github, \cref{fig:github}.
+\begin{figure}[h!]
+  \begin{center}
+    \includegraphics[width=\textwidth]{github.png}
+  \end{center}
+  \caption{Et utdrag fra commit-treet for arbeidet på github}
+  \label{fig:github}
+\end{figure}
+Her ser man hvordan de forskjellige medlemmene både har arbeidet på forskjellige
+deler av prosjektet, og hvordan man 
+
+
 \section{Kommunikasjon og samspill}
 Det kommunikasjonsnettverket som ble brukt på gruppa vår var åpent nettverk og sirkel nettverk. 
 I et åpent nettverk kommuniserer alle med alle. Denne formen for kommunikasjon kommer tydelig fram 
