--- a/prosess/main.tex
+++ b/prosess/main.tex
@@ -18,6 +18,7 @@
 	\clearpage		%Ny side
 
 %Innholdsfortegnelse (automagisk)
+	\setcounter{tocdepth}{1}
 	\tableofcontents
 	\clearpage		%Blank side
 	\thispagestyle{empty}	%Uten sidetall
@@ -31,6 +32,9 @@
 	\include{oppstart-utvikling} %Tilsvarende den ``røde delen'' på prosessrapport-presentasjonen.
 	\include{analyse}    %tilsvarende den brune delen
 	\include{oppsummering}
+
+%Appendikser:
+	\include{appendixa}
 	
 %Referanser
 	\bibliographystyle{plain}
