--- a/rapport/appendixa.tex
+++ b/rapport/appendixa.tex
@@ -26,7 +26,7 @@
 
 \lstinputlisting[language=C++]{../program/source/headers/cgsolver.h}
 
-\section{Conjugate gradient mehtod implementation}
+\section{Conjugate gradient method implementation}
 
 \lstinputlisting[language=C++]{../program/source/cgsolver.cpp}
 
