--- a/rapport/appendixb.tex
+++ b/rapport/appendixb.tex
@@ -1,10 +1,10 @@
 \appendix
-\label{avs:datasheet}
 \chapter{Data sheet used for registering bacon statistics}
+\label{avs:datasheet}
 \begin{figure}[h!]
   \begin{center}
     \includegraphics[width=\textwidth]{datasheet_bacon.pdf}
   \end{center}
   \caption{This data sheet was used to register the measurements with bacon}
-  \label{fig:datsheet}
+  \label{fig:datasheet}
 \end{figure}
