--- a/rapport/implementation.tex
+++ b/rapport/implementation.tex
@@ -262,7 +262,7 @@ started melting, caused the velocity field to blow up to infinity. Other issues 
 the nodes close to the boundary, seems to never reach melting point
 temperatures.\\
 
-After looking closely at the differential equations and their discrete equivelents, a number
+After looking closely at the differential equations and their discrete equivalents, a number
 of practical issues surfaced that would require modifications to existing code
 as well, so the continued development of the transport equation was dismissed
 as the project was close to its end.\\
