--- a/rapport/main.tex
+++ b/rapport/main.tex
@@ -24,8 +24,10 @@
 	\forord{This work was conducted in connection with the subject TMA4850
 	Experts in Teamwork - Applied Mathematics at NTNU, Trondheim. The work
 	was performed over the course of one semester, with primarily one
-	working day per week. The authors whish to thank Lise Kvalø and the
-	people at the Instrumentation Workshop at the Department of Physics 
+	working day per week. The authors wish to thank the course supervisor
+	Trond Kvamsdal for useful feedback on the numerical methods used,
+	Lise Kvalø and the
+	people at the Instrumentation Workshop at the Department of Physics
 	for their generosity in lending out relevant lab equipment, and Eivind
 	Steinnes at the Department of Structural Engineering for lending out the
 	office microwave oven.}
@@ -51,7 +53,7 @@
 
 %Appendix:
 	\include{appendixa}
-
+	\include{appendixb}
 %Referanser:
 	\bibliographystyle{plain}
 	\bibliography{references.bib}
