--- a/rapport/numerics.tex
+++ b/rapport/numerics.tex
@@ -9,7 +9,7 @@ The heat equation is on the form
 \end{equation}
 Here K is a constant, and we thus neglect it in the discretization of (\ref{heatequation}).\\
 
-In this project the Cranch-Nicholson method was used to discretize the heat
+In this project the Crank-Nicholson method was used to discretize the heat
 equation \cref{eq:heat1} in 3D over a finite grid. This method was chosen because
 it is unconditionally stable, and it converges in second order in time and
 space, as is shown below. \\
