La til Tuckman-referanse

--- a/prosess/referanser.bib
+++ b/prosess/referanser.bib
@@ -44,4 +44,12 @@
 	publisher="Pearson",
 	year="2006"
 }
-	
+@article{tuckman,
+	author="Bruce W. Tuckman",
+	title="Developmental sequence in small groups.",
+	year="1965",
+	journal="Psychological Bulletin",
+	volume="63",
+	number="6",
+	pages="384-399",
+}
