Startet på tilbakeblikk

--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -178,4 +178,13 @@ Dette gjøres på en slik måte at medlemmer på gruppa ikke opplever kritikken 
 ref // (1) Handbok for gruppearbeidet\\
 
 \section{Tilbakeblikk}
+\label{sec:tilbakeblikk}
 
+Når vi ser bakover er det lett å se at gruppen har gjennomgått trinnene i
+Tuckmanns \cite{tuckman} modell for gruppeutvikling. 
+
+\begin{itemize}
+\item[\textsc{Forming}]	
+\item[\textsc{Norming}]
+\item[\textsc{Storming}]
+\item[\textsc{Performing}]
