endret på kompetanse i praksis

--- a/prosess/analyse.tex
+++ b/prosess/analyse.tex
@@ -33,13 +33,20 @@ Som et eksempel på kompetanse i praksis presenterer vi en grafisk fremstilling
 av et utdrag av loggen på github, \cref{fig:github}.
 \begin{figure}[h!]
   \begin{center}
-    \includegraphics[width=\textwidth]{github.png}
+    \includegraphics[width=1.1\textwidth]{github.png}
   \end{center}
   \caption{Et utdrag fra commit-treet for arbeidet på github}
   \label{fig:github}
 \end{figure}
 Her ser man hvordan de forskjellige medlemmene både har arbeidet på forskjellige
-deler av prosjektet, og hvordan man 
+deler av prosjektet, og hvordan man har samarbeidet og gitt feedback på
+hverandre: først har Joakim endret ``analyse.tex'', og så har Åsmund kommet med
+kommentarer på den samme filen. Så har Knut lastet opp en fil som har med
+numerikk-delen å gjøre, noe som er typisk for at han arbeider mer separat fra
+resten. Så har Paul endret på rapporten, mens Turid har endret på
+presentasjonen. Det fremgår også fra den kompliserte trestrukturen at alle
+medlemmene bidrar på alle deler; i et team der alle bare jobbet med sitt ville
+strukturen vært omtrent bare parallelle linjer.
 
 \section{Kommunikasjon og samspill}
 Det kommunikasjonsnettverket som ble brukt på gruppa vår var åpent nettverk og sirkel nettverk. 
