tilleg til prosess/oppstart-og utvikling

--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -69,7 +69,7 @@ Ny oppgave som ble foreslått skulle ha noe med mat å gjøre, da dette var et a
 de tre hovedtemaene som ble presentert på første landsbydag. Etter en lang
 diskusjon av problemstilling kom noen av medlemmene på temaet steking av bacon i
 mikrobølgeovn. Dette var en oppgave som skapte stor entusiasme blant alle                    %Vi kom frem til at det var få kompliserte utfordringer knyttet til denne problemstillingen.
-gruppemedlemmene.Oppgaven virket som en spennende ide også fordi det
+gruppemedlemmene. Oppgaven virket som en spennende idè også fordi det
 passet bra med gruppas kunnskaper. Det virket som om oppgaven inkluderte en del
 numerikk og fysisk forståelse, noe som passet med de fleste gruppemedlemmene.
 Oppgaven inkluderte også visualisering av resultatet, noe som passet med Knut
@@ -78,8 +78,8 @@ med at vi valgte dette som tema i prosjektet.\\
 
 Videre ble det anskaffet en del litteratur slik at vi kunne finne ut hva vi
 kunne gjøre. Vi fant ut at det fantes en del publikasjoner rundt dette temaet.
-Mye tid ble derfor brukt til å finne litteratur til å gi oss en ide om hvordan
-vi skal gå løs på oppgaven. For å lette på samarbeidet mellom gruppemedlemmene
+Mye tid ble derfor brukt til å finne litteratur til å gi oss en idè om hvordan
+vi skulle gå løs på oppgaven. For å lette på samarbeidet mellom gruppemedlemmene
 ble det satt opp en konto slik at vi kunne dele kode og annet informasjon via
 internettet.\\
 
@@ -89,7 +89,7 @@ fokusert på hva vi skulle gjøre. Ettersom det begynte å bli en del arbeid,
 gjorde Turid en aksjon og delte ut oppgaver til gruppemedlemmene. 
 Dette gjorde hun fordi hun var frustrert over manglende initiativ. Gruppa opplevde da
 at Turid hadde en styrende rolle i gruppa. Likevel mente gruppa at dette var positivt
-fordi det var nødvendig å få til aksjoner for at gruppas mål skull bli nådd. I følge teorien
+fordi det var nødvendig å få til aksjoner for at gruppas mål skulle bli nådd. Ifølge teorien
 presentert i \cref{avs:roller} hadde Turid en rolle som oppgaveleder. 
 
 \section{Opprinnelig plan}
@@ -140,7 +140,7 @@ konsensus har blitt \emph{forsøkt} oppnådd før flertallsavgjørelse
 implementeres. $\\$
 
 Den første avgjørelsen gruppa tok var valg av oppgave. Åsmund var i starten
-veldig giret på skiforsøket. Som gikk ut på å måle spenstforfallet i en
+veldig giret på skiforsøket, som gikk ut på å måle spenstforfallet i en
 slalomski utover sesongen. Resten av gruppa var noe mer moderate i
 begeistringen. Det ble derfor arrangert ``høring'' hvor samtlige gruppemedlemmer
 kom med forslag. Disse ble så samlet og diskutert, og gruppa forsøkte å finne en
@@ -164,9 +164,9 @@ I gruppekontrakten ble det bestemt at vi skulle ha en flatstruktur i gruppen. Va
 var basert på at ingen egentlig ville gå inn i en lederrolle, og at vi ville ha en 
 større frihet til å formulere arbeidsoppgavene selv. Vi kom likevel opp i situasjoner
 som krevde at en person tok ledelse for å sikre effektiviteten til gruppen. I praksis 
-fekk gruppen en situasjonsbetinget lederstruktur. Situsjonsbetinget lederskap er definert
+fikk gruppen en situasjonsbetinget lederstruktur. Situsjonsbetinget lederskap er definert
 som delt lederskap blant gruppemedlemmer der medlemmene varierer oppførselen etter hva
-funksjon gruppen trenger til en hver tid, der en funksjon er en aksjon som blir satt 
+funksjon gruppen trenger til enhver tid, der en funksjon er en aksjon som blir satt 
 igang for å sikre effektiviteten i gruppen.\\
 
 Den situasjonsbetinget lederstrukturen førte og til at gruppemedlemmer tok rollen som 
@@ -184,7 +184,7 @@ mer aktiv i prosjektet i EIT, som er den delen som er mest oppgavefokusert. \\
 Bales statuerer at medlemmer som er veldig oppgavefokusert er mindre involvert i 
 relasjonsrettet aksjoner. (ref) Paul er den i gruppen som er mest oppgavefokusert. 
 På gruppa har han en tendens til å ta en faglig tilnærming, og liker å fokusere mest 
-på oppgava for hånd. Han fell altså oftere inn i rollen som diagnostiker (ref) og 
+på oppgava for hånd. Han faller altså oftere inn i rollen som diagnostiker (ref) og 
 informasjonssøkeren (ref). Han er dermed en styrke på gruppen ved at han holder 
 diskusjonene relevante, i tillegg til at han er et pålitelig medlem når det gjelder 
 å gjennomføre arbeidet i tide. Vi ser likevel en tendens til at Paul er mindre involvert 
@@ -198,7 +198,7 @@ fortsette på samme linje. Selv om hun var en av de som oftest var involvert i d
 var hun og ofte den som løste de, enten gjennom forhandlinger eller ved å trekke seg tilbake
 når hun gikk for langt. Turid var og det medlemmet i gruppen som oftest tok initiativ og ledelse 
 i prosessdelen av EIT, som fokuserer mest på relasjoner og samarbeid mellom medlemmer på gruppen. 
-Her verka hun ofte som målvakt (ref), ved å igangsette runde rundt bordet og være oppmerksom på 
+Her virket hun ofte som målvakt (ref), ved å igangsette runde rundt bordet og være oppmerksom på 
 at alle kom til ordet.
 Situasjon: Paul og Turid.\\
 
@@ -212,13 +212,13 @@ og har tilrettelagt for at medlemmene i gruppen har blitt bedre kjent. Dette har
 blant annet ved å alltid stille med en positiv innstilling og involvere gruppen i diskusjoner 
 som går på andre ting enn kun det faglige.\\
 
-Det bor en liten kritikker i samtlige medlemmer på gruppen. Vi ser likevel at Knut har tatt på 
+Det bor en liten kritiker i samtlige medlemmer på gruppen. Vi ser likevel at Knut har tatt på 
 seg denne rollen i gruppen i større grad enn andre. Kritikeren er viktig i gruppesammenheng 
 ved «systematisk, åpen, støttende og kritisk gransking av sitt og andres bidrag til gruppearbeidet.»
 Dette gjøres på en slik måte at medlemmer på gruppa ikke opplever kritikken som en trussel, 
 og dermed beholder fokuset på oppgaveløsning. (Innlegg frå andre).\\
 
-I figur \ref{Plot av egenskaper til medlemmer på gruppen} har me brukt den eine prosessøvelsen til 
+I figur \ref{Plot av egenskaper til medlemmer på gruppen} har vi brukt den eine prosessøvelsen til 
 lage eit plot over egenskepene til gruppemedlemmene. Me ser at dei personlege egenskapene reflekteres 
 igjen i dei rollene gruppemedlemmer har tatt på gruppen. Som gruppas kritikker ser me at Knut skårer 
 høgt på punktet; setter spørsmålsteikn ved teamets avgjørelser. Han skårer og høgere på punktet; trekker
